# orrin-dev

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: bee1dbd8a6d1_create_users_table.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  health.py  item.py
app/core/: config.py  csrf.py  security.py  session.py
app/db/: session.py
app/db/crud/: user.py
app/db/models/: user.py
app/graphql/: context.py  schema.py
app/graphql/mutations/: flavor.py
app/graphql/queries/: hello.py
app/schemas/: user.py
app/web/routes/: pages.py
app/web/static/: styles.css
app/web/static/css/: styles.css  variables.css
app/web/templates/: base.html  home.html
app/web/templates/auth/: login.html  register.html
tests/: conftest.py  test_csrf.py  test_session_fixation.py
